--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vite": "^6.1.0"
   },
   "dependencies": {
-    "@vercel/speed-insights": "^1.1.0"
+    "@vercel/speed-insights": "^1.1.0",
+    "scrollreveal": "^4.0.9"
   }
 }
